// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`SettingsItem should hide the chevron when showChevron is false 1`] = `
<View
  accessibilityHint="Tap to open"
  accessibilityLabel="Help"
  accessibilityRole="button"
  accessibilityState={
    {
      "busy": undefined,
      "checked": undefined,
      "disabled": false,
      "expanded": undefined,
      "selected": undefined,
    }
  }
  accessibilityValue={
    {
      "max": undefined,
      "min": undefined,
      "now": undefined,
      "text": undefined,
    }
  }
  accessible={true}
  collapsable={false}
  focusable={true}
  onBlur={[Function]}
  onClick={[Function]}
  onFocus={[Function]}
  onResponderGrant={[Function]}
  onResponderMove={[Function]}
  onResponderRelease={[Function]}
  onResponderTerminate={[Function]}
  onResponderTerminationRequest={[Function]}
  onStartShouldSetResponder={[Function]}
  style={
    [
      {
        "alignItems": "center",
        "backgroundColor": "#FFFFFF",
        "flexDirection": "row",
        "justifyContent": "space-between",
        "paddingHorizontal": 24,
        "paddingVertical": 16,
      },
      false,
    ]
  }
>
  <View
    style={
      {
        "alignItems": "center",
        "flex": 1,
        "flexDirection": "row",
        "gap": 12,
      }
    }
  >
    <help />
    <Text
      accessibilityLabel="Help"
      accessibilityRole="text"
      accessible={true}
      style={
        [
          {
            "variants": {
              "align": {
                "center": {
                  "textAlign": "center",
                },
                "justify": {
                  "textAlign": "justify",
                },
                "left": {
                  "textAlign": "left",
                },
                "right": {
                  "textAlign": "right",
                },
              },
              "color": {
                "accent": {
                  "color": "#1877F2",
                },
                "disabled": {
                  "color": "#B0B3B8",
                },
                "error": {
                  "color": "#ED2E7E",
                },
                "errorHover": {
                  "color": "#C30052",
                },
                "link": {
                  "color": "#1877F2",
                },
                "onPrimary": {
                  "color": "#FFFFFF",
                },
                "placeholder": {
                  "color": "#B0B3B8",
                },
                "primary": {
                  "color": "#050505",
                },
                "secondary": {
                  "color": "#4E4B66",
                },
                "success": {
                  "color": "#00BA88",
                },
                "successHover": {
                  "color": "#00966D",
                },
                "tertiary": {
                  "color": "#667080",
                },
                "warning": {
                  "color": "#F4B740",
                },
                "warningHover": {
                  "color": "#946200",
                },
              },
              "decoration": {
                "lineThrough": {
                  "textDecorationLine": "line-through",
                },
                "none": {
                  "textDecorationLine": "none",
                },
                "underline": {
                  "textDecorationLine": "underline",
                },
                "underlineLineThrough": {
                  "textDecorationLine": "underline line-through",
                },
              },
              "textTransform": {
                "capitalize": {
                  "textTransform": "capitalize",
                },
                "lowercase": {
                  "textTransform": "lowercase",
                },
                "none": {
                  "textTransform": "none",
                },
                "uppercase": {
                  "textTransform": "uppercase",
                },
              },
              "variant": {
                "body": {
                  "color": "#050505",
                  "fontFamily": "Poppins-Regular",
                  "fontSize": 16,
                  "fontWeight": "400",
                  "lineHeight": 24,
                },
                "bodyLg": {
                  "color": "#050505",
                  "fontFamily": "Poppins-Regular",
                  "fontSize": 18,
                  "fontWeight": "400",
                  "lineHeight": 28,
                },
                "bodySm": {
                  "color": "#050505",
                  "fontFamily": "Poppins-Regular",
                  "fontSize": 14,
                  "fontWeight": "400",
                  "lineHeight": 20,
                },
                "button": {
                  "color": "#050505",
                  "fontFamily": "Poppins-SemiBold",
                  "fontSize": 16,
                  "fontWeight": "600",
                  "letterSpacing": 0.12,
                  "lineHeight": 24,
                },
                "caption": {
                  "color": "#4E4B66",
                  "fontFamily": "Poppins-Regular",
                  "fontSize": 12,
                  "fontWeight": "400",
                  "lineHeight": 16,
                },
                "display": {
                  "color": "#050505",
                  "fontFamily": "Poppins-Bold",
                  "fontSize": 48,
                  "fontWeight": "700",
                  "lineHeight": 56,
                },
                "h1": {
                  "color": "#050505",
                  "fontFamily": "Poppins-Bold",
                  "fontSize": 32,
                  "fontWeight": "700",
                  "lineHeight": 40,
                },
                "h2": {
                  "color": "#050505",
                  "fontFamily": "Poppins-Bold",
                  "fontSize": 24,
                  "fontWeight": "700",
                  "lineHeight": 32,
                },
                "h3": {
                  "color": "#050505",
                  "fontFamily": "Poppins-SemiBold",
                  "fontSize": 20,
                  "fontWeight": "600",
                  "lineHeight": 28,
                },
                "h4": {
                  "color": "#050505",
                  "fontFamily": "Poppins-SemiBold",
                  "fontSize": 18,
                  "fontWeight": "600",
                  "lineHeight": 28,
                },
                "h5": {
                  "color": "#050505",
                  "fontFamily": "Poppins-SemiBold",
                  "fontSize": 16,
                  "fontWeight": "600",
                  "lineHeight": 24,
                },
                "label": {
                  "color": "#050505",
                  "fontFamily": "Poppins-Regular",
                  "fontSize": 14,
                  "fontWeight": "400",
                  "lineHeight": 20,
                },
                "placeholder": {
                  "color": "#B0B3B8",
                  "fontFamily": "Poppins-Regular",
                  "fontSize": 16,
                  "fontWeight": "400",
                  "lineHeight": 24,
                },
              },
            },
          },
          {
            "color": "#050505",
          },
        ]
      }
    >
      Help
    </Text>
  </View>
</View>
`;

exports[`SettingsItem should match to snapshot 1`] = `
<View
  accessibilityHint="Tap to open"
  accessibilityLabel="Settings"
  accessibilityRole="button"
  accessibilityState={
    {
      "busy": undefined,
      "checked": undefined,
      "disabled": false,
      "expanded": undefined,
      "selected": undefined,
    }
  }
  accessibilityValue={
    {
      "max": undefined,
      "min": undefined,
      "now": undefined,
      "text": undefined,
    }
  }
  accessible={true}
  collapsable={false}
  focusable={true}
  onBlur={[Function]}
  onClick={[Function]}
  onFocus={[Function]}
  onResponderGrant={[Function]}
  onResponderMove={[Function]}
  onResponderRelease={[Function]}
  onResponderTerminate={[Function]}
  onResponderTerminationRequest={[Function]}
  onStartShouldSetResponder={[Function]}
  style={
    [
      {
        "alignItems": "center",
        "backgroundColor": "#FFFFFF",
        "flexDirection": "row",
        "justifyContent": "space-between",
        "paddingHorizontal": 24,
        "paddingVertical": 16,
      },
      false,
    ]
  }
>
  <View
    style={
      {
        "alignItems": "center",
        "flex": 1,
        "flexDirection": "row",
        "gap": 12,
      }
    }
  >
    <settings />
    <Text
      accessibilityLabel="Settings"
      accessibilityRole="text"
      accessible={true}
      style={
        [
          {
            "variants": {
              "align": {
                "center": {
                  "textAlign": "center",
                },
                "justify": {
                  "textAlign": "justify",
                },
                "left": {
                  "textAlign": "left",
                },
                "right": {
                  "textAlign": "right",
                },
              },
              "color": {
                "accent": {
                  "color": "#1877F2",
                },
                "disabled": {
                  "color": "#B0B3B8",
                },
                "error": {
                  "color": "#ED2E7E",
                },
                "errorHover": {
                  "color": "#C30052",
                },
                "link": {
                  "color": "#1877F2",
                },
                "onPrimary": {
                  "color": "#FFFFFF",
                },
                "placeholder": {
                  "color": "#B0B3B8",
                },
                "primary": {
                  "color": "#050505",
                },
                "secondary": {
                  "color": "#4E4B66",
                },
                "success": {
                  "color": "#00BA88",
                },
                "successHover": {
                  "color": "#00966D",
                },
                "tertiary": {
                  "color": "#667080",
                },
                "warning": {
                  "color": "#F4B740",
                },
                "warningHover": {
                  "color": "#946200",
                },
              },
              "decoration": {
                "lineThrough": {
                  "textDecorationLine": "line-through",
                },
                "none": {
                  "textDecorationLine": "none",
                },
                "underline": {
                  "textDecorationLine": "underline",
                },
                "underlineLineThrough": {
                  "textDecorationLine": "underline line-through",
                },
              },
              "textTransform": {
                "capitalize": {
                  "textTransform": "capitalize",
                },
                "lowercase": {
                  "textTransform": "lowercase",
                },
                "none": {
                  "textTransform": "none",
                },
                "uppercase": {
                  "textTransform": "uppercase",
                },
              },
              "variant": {
                "body": {
                  "color": "#050505",
                  "fontFamily": "Poppins-Regular",
                  "fontSize": 16,
                  "fontWeight": "400",
                  "lineHeight": 24,
                },
                "bodyLg": {
                  "color": "#050505",
                  "fontFamily": "Poppins-Regular",
                  "fontSize": 18,
                  "fontWeight": "400",
                  "lineHeight": 28,
                },
                "bodySm": {
                  "color": "#050505",
                  "fontFamily": "Poppins-Regular",
                  "fontSize": 14,
                  "fontWeight": "400",
                  "lineHeight": 20,
                },
                "button": {
                  "color": "#050505",
                  "fontFamily": "Poppins-SemiBold",
                  "fontSize": 16,
                  "fontWeight": "600",
                  "letterSpacing": 0.12,
                  "lineHeight": 24,
                },
                "caption": {
                  "color": "#4E4B66",
                  "fontFamily": "Poppins-Regular",
                  "fontSize": 12,
                  "fontWeight": "400",
                  "lineHeight": 16,
                },
                "display": {
                  "color": "#050505",
                  "fontFamily": "Poppins-Bold",
                  "fontSize": 48,
                  "fontWeight": "700",
                  "lineHeight": 56,
                },
                "h1": {
                  "color": "#050505",
                  "fontFamily": "Poppins-Bold",
                  "fontSize": 32,
                  "fontWeight": "700",
                  "lineHeight": 40,
                },
                "h2": {
                  "color": "#050505",
                  "fontFamily": "Poppins-Bold",
                  "fontSize": 24,
                  "fontWeight": "700",
                  "lineHeight": 32,
                },
                "h3": {
                  "color": "#050505",
                  "fontFamily": "Poppins-SemiBold",
                  "fontSize": 20,
                  "fontWeight": "600",
                  "lineHeight": 28,
                },
                "h4": {
                  "color": "#050505",
                  "fontFamily": "Poppins-SemiBold",
                  "fontSize": 18,
                  "fontWeight": "600",
                  "lineHeight": 28,
                },
                "h5": {
                  "color": "#050505",
                  "fontFamily": "Poppins-SemiBold",
                  "fontSize": 16,
                  "fontWeight": "600",
                  "lineHeight": 24,
                },
                "label": {
                  "color": "#050505",
                  "fontFamily": "Poppins-Regular",
                  "fontSize": 14,
                  "fontWeight": "400",
                  "lineHeight": 20,
                },
                "placeholder": {
                  "color": "#B0B3B8",
                  "fontFamily": "Poppins-Regular",
                  "fontSize": 16,
                  "fontWeight": "400",
                  "lineHeight": 24,
                },
              },
            },
          },
          {
            "color": "#050505",
          },
        ]
      }
    >
      Settings
    </Text>
  </View>
  <RNSVGSvgView
    align="xMidYMid"
    bbHeight={24}
    bbWidth={24}
    fill="none"
    focusable={false}
    height={24}
    meetOrSlice={0}
    minX={0}
    minY={0}
    style={
      [
        {
          "backgroundColor": "transparent",
          "borderWidth": 0,
        },
        {
          "flex": 0,
          "height": 24,
          "width": 24,
        },
      ]
    }
    vbHeight={24}
    vbWidth={24}
    width={24}
  >
    <RNSVGGroup
      fill={null}
      propList={
        [
          "fill",
        ]
      }
    >
      <RNSVGGroup
        clipPath="a"
        fill={
          {
            "payload": 4278190080,
            "type": 0,
          }
        }
      >
        <RNSVGPath
          d="M12.172 12 9.343 9.172l1.414-1.415L15 12l-4.243 4.243-1.414-1.415L12.172 12Z"
          fill={
            {
              "payload": 4283321190,
              "type": 0,
            }
          }
          propList={
            [
              "fill",
            ]
          }
        />
      </RNSVGGroup>
      <RNSVGDefs>
        <RNSVGClipPath
          fill={
            {
              "payload": 4278190080,
              "type": 0,
            }
          }
          name="a"
        >
          <RNSVGPath
            d="M0 0h24v24H0z"
            fill={
              {
                "payload": 4294967295,
                "type": 0,
              }
            }
            propList={
              [
                "fill",
              ]
            }
          />
        </RNSVGClipPath>
      </RNSVGDefs>
    </RNSVGGroup>
  </RNSVGSvgView>
</View>
`;

exports[`SettingsItem should show a chevron by default 1`] = `
<View
  accessibilityHint="Tap to open"
  accessibilityLabel="Notifications"
  accessibilityRole="button"
  accessibilityState={
    {
      "busy": undefined,
      "checked": undefined,
      "disabled": false,
      "expanded": undefined,
      "selected": undefined,
    }
  }
  accessibilityValue={
    {
      "max": undefined,
      "min": undefined,
      "now": undefined,
      "text": undefined,
    }
  }
  accessible={true}
  collapsable={false}
  focusable={true}
  onBlur={[Function]}
  onClick={[Function]}
  onFocus={[Function]}
  onResponderGrant={[Function]}
  onResponderMove={[Function]}
  onResponderRelease={[Function]}
  onResponderTerminate={[Function]}
  onResponderTerminationRequest={[Function]}
  onStartShouldSetResponder={[Function]}
  style={
    [
      {
        "alignItems": "center",
        "backgroundColor": "#FFFFFF",
        "flexDirection": "row",
        "justifyContent": "space-between",
        "paddingHorizontal": 24,
        "paddingVertical": 16,
      },
      false,
    ]
  }
>
  <View
    style={
      {
        "alignItems": "center",
        "flex": 1,
        "flexDirection": "row",
        "gap": 12,
      }
    }
  >
    <notifications />
    <Text
      accessibilityLabel="Notifications"
      accessibilityRole="text"
      accessible={true}
      style={
        [
          {
            "variants": {
              "align": {
                "center": {
                  "textAlign": "center",
                },
                "justify": {
                  "textAlign": "justify",
                },
                "left": {
                  "textAlign": "left",
                },
                "right": {
                  "textAlign": "right",
                },
              },
              "color": {
                "accent": {
                  "color": "#1877F2",
                },
                "disabled": {
                  "color": "#B0B3B8",
                },
                "error": {
                  "color": "#ED2E7E",
                },
                "errorHover": {
                  "color": "#C30052",
                },
                "link": {
                  "color": "#1877F2",
                },
                "onPrimary": {
                  "color": "#FFFFFF",
                },
                "placeholder": {
                  "color": "#B0B3B8",
                },
                "primary": {
                  "color": "#050505",
                },
                "secondary": {
                  "color": "#4E4B66",
                },
                "success": {
                  "color": "#00BA88",
                },
                "successHover": {
                  "color": "#00966D",
                },
                "tertiary": {
                  "color": "#667080",
                },
                "warning": {
                  "color": "#F4B740",
                },
                "warningHover": {
                  "color": "#946200",
                },
              },
              "decoration": {
                "lineThrough": {
                  "textDecorationLine": "line-through",
                },
                "none": {
                  "textDecorationLine": "none",
                },
                "underline": {
                  "textDecorationLine": "underline",
                },
                "underlineLineThrough": {
                  "textDecorationLine": "underline line-through",
                },
              },
              "textTransform": {
                "capitalize": {
                  "textTransform": "capitalize",
                },
                "lowercase": {
                  "textTransform": "lowercase",
                },
                "none": {
                  "textTransform": "none",
                },
                "uppercase": {
                  "textTransform": "uppercase",
                },
              },
              "variant": {
                "body": {
                  "color": "#050505",
                  "fontFamily": "Poppins-Regular",
                  "fontSize": 16,
                  "fontWeight": "400",
                  "lineHeight": 24,
                },
                "bodyLg": {
                  "color": "#050505",
                  "fontFamily": "Poppins-Regular",
                  "fontSize": 18,
                  "fontWeight": "400",
                  "lineHeight": 28,
                },
                "bodySm": {
                  "color": "#050505",
                  "fontFamily": "Poppins-Regular",
                  "fontSize": 14,
                  "fontWeight": "400",
                  "lineHeight": 20,
                },
                "button": {
                  "color": "#050505",
                  "fontFamily": "Poppins-SemiBold",
                  "fontSize": 16,
                  "fontWeight": "600",
                  "letterSpacing": 0.12,
                  "lineHeight": 24,
                },
                "caption": {
                  "color": "#4E4B66",
                  "fontFamily": "Poppins-Regular",
                  "fontSize": 12,
                  "fontWeight": "400",
                  "lineHeight": 16,
                },
                "display": {
                  "color": "#050505",
                  "fontFamily": "Poppins-Bold",
                  "fontSize": 48,
                  "fontWeight": "700",
                  "lineHeight": 56,
                },
                "h1": {
                  "color": "#050505",
                  "fontFamily": "Poppins-Bold",
                  "fontSize": 32,
                  "fontWeight": "700",
                  "lineHeight": 40,
                },
                "h2": {
                  "color": "#050505",
                  "fontFamily": "Poppins-Bold",
                  "fontSize": 24,
                  "fontWeight": "700",
                  "lineHeight": 32,
                },
                "h3": {
                  "color": "#050505",
                  "fontFamily": "Poppins-SemiBold",
                  "fontSize": 20,
                  "fontWeight": "600",
                  "lineHeight": 28,
                },
                "h4": {
                  "color": "#050505",
                  "fontFamily": "Poppins-SemiBold",
                  "fontSize": 18,
                  "fontWeight": "600",
                  "lineHeight": 28,
                },
                "h5": {
                  "color": "#050505",
                  "fontFamily": "Poppins-SemiBold",
                  "fontSize": 16,
                  "fontWeight": "600",
                  "lineHeight": 24,
                },
                "label": {
                  "color": "#050505",
                  "fontFamily": "Poppins-Regular",
                  "fontSize": 14,
                  "fontWeight": "400",
                  "lineHeight": 20,
                },
                "placeholder": {
                  "color": "#B0B3B8",
                  "fontFamily": "Poppins-Regular",
                  "fontSize": 16,
                  "fontWeight": "400",
                  "lineHeight": 24,
                },
              },
            },
          },
          {
            "color": "#050505",
          },
        ]
      }
    >
      Notifications
    </Text>
  </View>
  <RNSVGSvgView
    align="xMidYMid"
    bbHeight={24}
    bbWidth={24}
    fill="none"
    focusable={false}
    height={24}
    meetOrSlice={0}
    minX={0}
    minY={0}
    style={
      [
        {
          "backgroundColor": "transparent",
          "borderWidth": 0,
        },
        {
          "flex": 0,
          "height": 24,
          "width": 24,
        },
      ]
    }
    vbHeight={24}
    vbWidth={24}
    width={24}
  >
    <RNSVGGroup
      fill={null}
      propList={
        [
          "fill",
        ]
      }
    >
      <RNSVGGroup
        clipPath="a"
        fill={
          {
            "payload": 4278190080,
            "type": 0,
          }
        }
      >
        <RNSVGPath
          d="M12.172 12 9.343 9.172l1.414-1.415L15 12l-4.243 4.243-1.414-1.415L12.172 12Z"
          fill={
            {
              "payload": 4283321190,
              "type": 0,
            }
          }
          propList={
            [
              "fill",
            ]
          }
        />
      </RNSVGGroup>
      <RNSVGDefs>
        <RNSVGClipPath
          fill={
            {
              "payload": 4278190080,
              "type": 0,
            }
          }
          name="a"
        >
          <RNSVGPath
            d="M0 0h24v24H0z"
            fill={
              {
                "payload": 4294967295,
                "type": 0,
              }
            }
            propList={
              [
                "fill",
              ]
            }
          />
        </RNSVGClipPath>
      </RNSVGDefs>
    </RNSVGGroup>
  </RNSVGSvgView>
</View>
`;
